Issue while building the Docker image, MLp cannot be installed (local install works just fine). Decided for now to install MLp via github so removed the MLp folder in this project.

--- a/kedrospaceship/.dockerignore
+++ b/kedrospaceship/.dockerignore
@@ -9,8 +9,9 @@ Dockerfile
 conf/**/*credentials*
 
 # ignore all local configuration
-#conf/local
-#!conf/local/.gitkeep
+conf/local
+!conf/local/.gitkeep
+!conf/local/mlflow.yml
 
 # ignore everything in the following folders
 mlruns
