--- a/kedrospaceship/requirements.txt
+++ b/kedrospaceship/requirements.txt
@@ -7,7 +7,7 @@ kedro-viz>=6.7.0
 notebook
 ruff~=0.1.8
 
-
+#poetry-core==1.9.0
 dill==0.3.8 # For effective serialization of function_transformers
 docker==7.0.0
 kedro==0.19.2
@@ -18,4 +18,4 @@ kedro_mlflow==0.12.1
 mlflow==2.10.2
 xgboost==2.0.3
 # Editable install with no version control (MLp==0.1)
--e /home/kedro_docker/MLp
+#-e /home/kedro_docker/MLp
