--- a/kedrospaceship/requirements.txt
+++ b/kedrospaceship/requirements.txt
@@ -13,9 +13,9 @@ docker==7.0.0
 kedro==0.19.2
 kedro-airflow==0.8.0
 kedro-datasets==2.0.0
-kedro-viz==7.1.0
+kedro-viz==7.1.0 
 kedro_mlflow==0.12.1
 mlflow==2.10.2
 xgboost==2.0.3
 # Editable install with no version control (MLp==0.1)
-#-e /home/kedro_docker/MLp
+MLp @ git+https://github.com/ValentinOzeel/MLp.git@main#egg=MLp
